// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 1`] = `
<a
  className="sc-kpOJdX cRkXYD"
/>
`;

exports[`should render abbr 1`] = `
<abbr
  className="sc-eHgmQL kqukNk"
/>
`;

exports[`should render article 1`] = `
<article
  className="sc-iwsKbI fzHXAY"
/>
`;

exports[`should render aside 1`] = `
<aside
  className="sc-gZMcBi fogSqI"
/>
`;

exports[`should render audio 1`] = `
<audio
  className="sc-jnlKLf huWUzf"
/>
`;

exports[`should render blockquote 1`] = `
<blockquote
  className="sc-gqjmRU gIpHXN"
/>
`;

exports[`should render box 1`] = `
<div
  className="sc-ifAKCX SZqON"
/>
`;

exports[`should render button 1`] = `
<button
  className="sc-fMiknA bwPSGt"
/>
`;

exports[`should render caption 1`] = `
<caption
  className="sc-uJMKN dtgCxv"
/>
`;

exports[`should render cite 1`] = `
<cite
  className="sc-jWBwVP hRNUnv"
/>
`;

exports[`should render code 1`] = `
<code
  className="sc-gPEVay ezGzsB"
/>
`;

exports[`should render col 1`] = `
<col
  className="sc-jqCOkK criJtM"
/>
`;

exports[`should render colgroup 1`] = `
<colgroup
  className="sc-dNLxif dkasoP"
/>
`;

exports[`should render data 1`] = `
<data
  className="sc-cMljjf eHDWjh"
/>
`;

exports[`should render dd 1`] = `
<dd
  className="sc-jhAzac cQPwYT"
/>
`;

exports[`should render del 1`] = `
<del
  className="sc-iAyFgw kpbKLO"
/>
`;

exports[`should render dfn 1`] = `
<dfn
  className="sc-brqgnP jFNqYd"
/>
`;

exports[`should render div 1`] = `
<div
  className="sc-EHOje hywXgG"
/>
`;

exports[`should render dl 1`] = `
<dl
  className="sc-bRBYWo kTAClo"
/>
`;

exports[`should render dt 1`] = `
<dt
  className="sc-hzDkRC kcgUeC"
/>
`;

exports[`should render em 1`] = `
<em
  className="sc-ckVGcZ eiNulz"
/>
`;

exports[`should render fieldset 1`] = `
<fieldset
  className="sc-caSCKo brlTHe"
/>
`;

exports[`should render figcaption 1`] = `
<figcaption
  className="sc-jlyJG iSpCie"
/>
`;

exports[`should render figure 1`] = `
<figure
  className="sc-iRbamj lmOkkl"
/>
`;

exports[`should render flex 1`] = `
<div
  className="sc-bxivhb iMKkxF"
/>
`;

exports[`should render footer 1`] = `
<footer
  className="sc-htoDjs glVWBB"
/>
`;

exports[`should render form 1`] = `
<form
  className="sc-fAjcbJ CUVAf"
/>
`;

exports[`should render h1 1`] = `
<h1
  className="sc-jTzLTM loipK"
/>
`;

exports[`should render h2 1`] = `
<h2
  className="sc-fjdhpX dgiyVw"
/>
`;

exports[`should render h3 1`] = `
<h3
  className="sc-jzJRlG cVPmuf"
/>
`;

exports[`should render h4 1`] = `
<h4
  className="sc-cSHVUG kOHRLT"
/>
`;

exports[`should render h5 1`] = `
<h5
  className="sc-kAzzGY GgDJU"
/>
`;

exports[`should render h6 1`] = `
<h6
  className="sc-chPdSV cOUoak"
/>
`;

exports[`should render header 1`] = `
<header
  className="sc-bZQynM MDkAr"
/>
`;

exports[`should render hgroup 1`] = `
<hgroup
  className="sc-VigVT eqKDBn"
/>
`;

exports[`should render image 1`] = `
<image
  className="sc-gGBfsJ hQWQZL"
/>
`;

exports[`should render img 1`] = `
<img
  className="sc-bbmXgH kwliPx"
/>
`;

exports[`should render input 1`] = `
<input
  className="sc-cHGsZl enqBbK"
/>
`;

exports[`should render inputsubmit 1`] = `
<input
  className="sc-eqIVtm jZSKLO"
/>
`;

exports[`should render label 1`] = `
<label
  className="sc-kjoXOD bPKkuO"
/>
`;

exports[`should render legend 1`] = `
<legend
  className="sc-gisBJw dcMcJG"
/>
`;

exports[`should render li 1`] = `
<li
  className="sc-Rmtcm eglZAm"
/>
`;

exports[`should render linkbutton 1`] = `
<a
  className="sc-dVhcbM eCbeSO"
/>
`;

exports[`should render main 1`] = `
<main
  className="sc-gzVnrw jbtnrY"
/>
`;

exports[`should render mark 1`] = `
<mark
  className="sc-hSdWYo hyRchj"
/>
`;

exports[`should render nav 1`] = `
<nav
  className="sc-fBuWsC gdgOwB"
/>
`;

exports[`should render ol 1`] = `
<ol
  className="sc-csuQGl bgChJc"
/>
`;

exports[`should render option 1`] = `null`;

exports[`should render p 1`] = `
<p
  className="sc-kGXeez djzptB"
/>
`;

exports[`should render pre 1`] = `
<pre
  className="sc-jDwBTQ jtQDuv"
/>
`;

exports[`should render q 1`] = `
<q
  className="sc-cvbbAY eaupZT"
/>
`;

exports[`should render section 1`] = `
<section
  className="sc-dnqmqq tXkDO"
/>
`;

exports[`should render select 1`] = `
<select
  className="sc-TOsTZ ffFwZf"
/>
`;

exports[`should render small 1`] = `
<small
  className="sc-eNQAEJ kUrHge"
/>
`;

exports[`should render span 1`] = `
<span
  className="sc-dxgOiQ gAPuQb"
/>
`;

exports[`should render strong 1`] = `
<strong
  className="sc-jKJlTe gPHbYw"
/>
`;

exports[`should render sub 1`] = `
<sub
  className="sc-hMqMXs dYLgtL"
/>
`;

exports[`should render sup 1`] = `
<sup
  className="sc-kEYyzF hJPlxg"
/>
`;

exports[`should render table 1`] = `
<table
  className="sc-cJSrbW juuSgL"
/>
`;

exports[`should render tbody 1`] = `
<tbody
  className="sc-ksYbfQ hKjDLE"
/>
`;

exports[`should render td 1`] = `
<td
  className="sc-hqyNC emJXjY"
/>
`;

exports[`should render text 1`] = `
<p
  className="sc-kgoBCf kktdhb"
/>
`;

exports[`should render textarea 1`] = `
<textarea
  className="sc-kgAjT eUcZCr"
/>
`;

exports[`should render tfoot 1`] = `
<tfoot
  className="sc-jbKcbu dVeLIL"
/>
`;

exports[`should render th 1`] = `
<th
  className="sc-frDJqD CUJNO"
/>
`;

exports[`should render thead 1`] = `
<thead
  className="sc-hmzhuo YXwmD"
/>
`;

exports[`should render time 1`] = `
<time
  className="sc-jAaTju cAbaOI"
/>
`;

exports[`should render tr 1`] = `
<tr
  className="sc-kvZOFW iUdtxL"
/>
`;

exports[`should render u 1`] = `
<u
  className="sc-kkGfuU dtKtDz"
/>
`;

exports[`should render ul 1`] = `
<ul
  className="sc-gipzik bsyXcN"
/>
`;

exports[`should render video 1`] = `
<video
  className="sc-fYxtnH kiwDsR"
/>
`;
